[gd_scene load_steps=13 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/close_button.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Background.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/host_button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Logo.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/join_button.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Textbox.png" type="Texture" id=7]
[ext_resource path="res://Fonts/American Typewriter Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=3]
size = 35
extra_spacing_char = 1
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 402, 82 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 402, 82 )
modulate_color = Color( 0.592157, 0.592157, 0.592157, 1 )

[sub_resource type="Theme" id=2]
LineEdit/colors/clear_button_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
LineEdit/colors/cursor_color = Color( 0.356863, 0.356863, 0.356863, 1 )
LineEdit/colors/font_color = Color( 0.356863, 0.356863, 0.356863, 1 )
LineEdit/colors/font_color_selected = Color( 0.14902, 0.14902, 0.14902, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.137255, 0.137255, 0.137255, 1 )
LineEdit/colors/selection_color = Color( 1, 1, 1, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = SubResource( 3 )
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = SubResource( 4 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -874.249
margin_top = -275.0
margin_right = 1899.75
margin_bottom = 981.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 166.0
margin_right = 800.0
margin_bottom = 448.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Camera" type="Camera2D" parent="."]
offset = Vector2( 400, 400 )
current = true

[node name="Host" type="TextureButton" parent="."]
margin_left = 222.0
margin_top = 391.309
margin_right = 935.0
margin_bottom = 577.309
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )

[node name="CloseSession" type="TextureButton" parent="Host"]
visible = false
modulate = Color( 0.945098, 0.611765, 0.223529, 1 )
self_modulate = Color( 0.945098, 0.611765, 0.223529, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 384.0
margin_top = -32.0
margin_right = 448.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="TextureButton" parent="."]
margin_left = 222.0
margin_top = 525.091
margin_right = 935.0
margin_bottom = 711.091
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )

[node name="Cooldown" type="Timer" parent="Join"]
one_shot = true

[node name="CodeEnter" type="LineEdit" parent="."]
margin_left = 296.0
margin_top = 642.0
margin_right = 713.0
margin_bottom = 800.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 2 )
text = "CODE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Host/CloseSession" to="." method="_on_CloseSession_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
[connection signal="timeout" from="Join/Cooldown" to="." method="_on_Cooldown_timeout"]
